--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Add Web Animations Polyfill :) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.2/web-animations.min.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@proyecto26/animatable-component@1.1.10/dist/animatable-component/animatable-component.esm.js"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <script type="text/javascript">
     function animatableLoaded() {
       document.querySelector('body').classList.remove('d-none');
@@ -281,6 +282,7 @@
           </div>
         </div>
       </section>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="pavanvittanala" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/pavanvittanala?trk=profile-badge">Vittanala Babu Surya Sandeep Pavan Kumar</a></div>
     </section>
     <div class="btn-group-fab d-print-none">
       <div>
