--- a/index.html
+++ b/index.html
@@ -22,277 +22,124 @@
     } else animatableLoaded()
     </script>
   </head>
-  <body class="d-none">
-    <section id="app" class="container-fluid">
-      <header class="header position-relative">
-        <animatable-component autoplay animation="fadeInDownBig"  easing="ease-in-out" duration="1200">
-          <div class="headLine position-absolute"></div>
-        </animatable-component>
-        <div class="row">
-          <div class="col">
-            <animatable-component
-              autoplay
-              animation="fadeInLeft"
-              easing="ease-in-out"
-              duration="1200"
-            >
-              <h1 class="firstName text-break">
-                Pavan
-              </h1>
-            </animatable-component>
-            <animatable-component
-              autoplay
-              animation="fadeInDown"
-              easing="ease-in-out"
-              duration="1200"
-            >
-              <h2 class="lastName text-nowrap">
-                Vittanala
-              </h2>
-            </animatable-component>
-            <animatable-component
-              autoplay
-              animation="fade-in-left"
-              easing="ease-in-out"
-              duration="1200"
-            >
-              <p class="jobTitle">
-                <i class="bi bi-circle-fill"></i>
-                <span class="text-break">
-                  <b>Student, Python Programmer, Technocrat<b>
-                </span>
-              </p>
-             </animatable-component>
-          </div>
-          <div class="col-auto d-none d-lg-block d-print-block">
-            <animatable-component autoplay animation="rotateIn" easing="ease-in" duration="1200">
-              <img src="https://media-exp1.licdn.com/dms/image/C5603AQHax6qaJ7DnJg/profile-displayphoto-shrink_200_200/0/1611910041358?e=1629331200&v=beta&t=enr-UVabp2aTxTWscq-x9xsoVFmRd2aUkryrztT9PRQ" v-bind:src.prop="photo" class="photo border border-2 border-dark rounded-circle img-fluid float-end img-thumbnail">
-            </animatable-component>
-          </div>
-        </div>
-        <animatable-component autoplay animation="fadeInUpBig"  easing="ease-in-out" duration="1200">
-          <div class="middleLine position-absolute"></div>
-        </animatable-component>
-      </header>
-      <section class="content">
-        <div class="row">
-          <div class="col personal-details me-4">
-            <div class="row list-item me-5">
-              <div class="col-auto">
-                <animatable-component autoplay animation="heartBeat" easing="ease-in" duration="1200">
-                  <div class="icon d-flex justify-content-center">
-                    <i class="bi bi-geo-alt-fill" role="img" aria-label="Location"></i>
-                  </div>
-                </animatable-component>
-              </div>
-              <div class="col" style="white-space: pre-line;">
-                <p>Rajahmundry, India</p>
-              </div>
-            </div>
-            <div v-if="!!phone" class="row list-item me-5">
-              <div class="col-auto align-self-center">
-                <animatable-component autoplay animation="swing" easing="ease-in" duration="1200">
-                  <div class="icon d-flex justify-content-center">
-                    <i class="bi bi-telephone-fill" role="img" aria-label="Telephone"></i>
-                  </div>
-                </animatable-component>
-              </div>
-              <div class="col">
-                <a v-bind:href="'tel:'+ phone" class="text-decoration-none">
-                  <p>9381449331</p>
-                </a>
-              </div>
-            </div>
-            <div class="row list-item me-5">
-              <div class="col-auto align-self-center">
-                <animatable-component autoplay animation="flip" easing="ease-in" duration="1200">
-                  <div class="icon d-flex justify-content-center">
-                    <i class="bi bi-envelope-fill" role="img" aria-label="Email"></i>
-                  </div>
-                </animatable-component>
-              </div>
-              <div class="col">
-                <a v-bind:href="'mailto:'+ email" class="text-decoration-none">
-                  <p>vittanala2002@gmail.com</p>
-                </a>
-              </div>
-            </div>
-            <div class="row mt-5 me-5">
-              <div class="col">
-                <p class="title">Education</p>
-              </div>
-            </div>
-            <div class="row record" v-for="e in education">
-              <div class="col-auto bullet">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p class="fw-bold text-uppercase">
-                  {{ e.degree }}
-                </p>
-                <p class="fw-bold text-uppercase">
-                  {{ e.school }}, {{ e.graduationDate }}
-                </p>
-                <p>{{ e.description }}</p>
-              </div>
-            </div>
-            <div class="row mt-5 me-5">
-              <div class="col p-0">
-                <p class="title">Links</p>
-              </div>
-            </div>
-            <div class="row record me-5" v-for="l in links">
-              <div class="col-auto bullet mb-5">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p>
-                  GitHub:
-                  <a class="text-reset" href="https://github.com/pavanvittanala" v-bind:href.prop="l.link">
-                    pavanvittanala
-                  </a>
-                </p>
-              </div>
-            </div>
+  <body>
 
-             <div class="row record me-5" v-for="l in links">
-              <div class="col-auto bullet mb-5">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p>
-                  Website:
-                  <a class="text-reset" href="https://pavanvittanala.github.io" v-bind:href.prop="l.link">
-                    pavanvittanala.ml
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="row record me-5" v-for="l in links">
-              <div class="col-auto bullet mb-5">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p>
-                  Instagram:
-                  <a class="text-reset" href="https://www.instagram.com/vittanala.pavan___00.02/" v-bind:href.prop="l.link">
-                    Vittanala.Pavan
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="row record me-5" v-for="l in links">
-              <div class="col-auto bullet mb-5">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p>
-                  Facebook:
-                  <a class="text-reset" href="https://www.facebook.com/VittanalaPavan" v-bind:href.prop="l.link">
-                    Vittanala Pavan
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="row mt-5 me-5">
-              <div class="col p-0">
-                <p class="title">Skills</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <ul class="ms-2">
-                  <li class="pb-2" v-for="skill in skills">
-                    {{ skill }}
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="row mt-5 me-5">
-              <div class="col p-0">
-                <p class="title">Languages</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <ul class="ms-2">
-                  <li class="pb-2" v-for="language in languages">
-                    {{ language }}
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col col-8">
-            <animatable-component
-              autoplay
-              animation="fade-in-right"
-              easing="ease-in-out"
-              duration="1200"
-            >
-              <div class="row bullet">
-              <div class="col-auto pt-2">
-                <i class="bi bi-circle-fill"></i>
-              </div>
-              <div class="col">
-                <p class="title">About Me</p>
-              </div>
-            </div>
-            </animatable-component>
-            <animatable-component
-              autoplay
-              animation="fade-in-right"
-              easing="ease-in-out"
-              duration="1200"
-            >
-              <div class="row record bullet">
-              <div class="col-auto">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p style="white-space: pre-line;">{{ professionalSummary }}</p>
-              </div>
-            </div>
-            </animatable-component>
-            <div class="row mt-5">
-              <div class="col-auto bullet pt-2">
-                <i class="bi bi-circle-fill"></i>
-              </div>
-              <div class="col">
-                <p class="title">Work Experience</p>
-              </div>
-            </div>
-            <div class="row record mb-4 bullet" v-for="employment in employmentHistory">
-              <div class="col-auto">
-                <i class="bi bi-record-circle"></i>
-              </div>
-              <div class="col">
-                <p class="text-uppercase fw-bold position-relative">
-                  {{ employment.jobTitle }}
-                  <span>&nbsp;|&nbsp;{{ employment.startDate }} - {{ employment.endDate }}</span>
-                </p>
-                <p class="text-lowercase fst-italic fw-bold">
-                  {{ employment.employer }}, {{ employment.city }}
-                </p>
-                <p class="mb-0" v-for="achievement in employment.achievements">
-                  • {{ achievement }}
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="pavanvittanala" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/pavanvittanala?trk=profile-badge">Vittanala Babu Surya Sandeep Pavan Kumar</a></div>
-    </section>
-    <div class="btn-group-fab d-print-none">
-      <div>
-        <button onclick="javascript:window.print()" type="button" class="btn btn-main btn-primary" title="Print">
-          <i class="bi bi-printer fs-3"></i>
-        </button>
-      </div>
+<link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
+<link href="resume css.css" rel="stylesheet">
+
+<nav id="navbar">
+  <ul>
+    <li><a href="#welcome-section">About</a></li>
+    <li><a href="#projects">Project</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
+<section id="welcome-section">
+  <h1>Hey, I am Pavan Vittanala</h1>
+  <p id="spin"></p>
+</section>
+
+<section id="projects">
+  <h1><a>These are some of my projects</a></h1>
+  <div class="project-grid">
+    <div class="sub-project">
+      <!-- <a href=""> -->
+        <h2>Face Login</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      <!-- </a> -->
     </div>
-    
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  </body>
+    <div class="sub-project">
+      <!-- <a href=""> -->
+        <h2>Scrap Book</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      <!-- </a> -->
+    </div>
+    <div class="sub-project">
+      <!-- <a href=""> -->
+        <h2>ClipBoard</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      <!-- </a> -->
+    </div>
+    <!-- <div class="sub-project">
+      <a href="https://codepen.io/farmanhafeez">
+        <h2>PROJECT</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="https://codepen.io/farmanhafeez">
+        <h2>PROJECT</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      </a>
+    </div>
+    <div class="sub-project">
+      <a href="https://codepen.io/farmanhafeez">
+        <h2>PROJECT</h2>
+        <p class="project-tile">
+        <span class="code"><</span>
+          &nbsp;
+          More details
+          &nbsp;
+        <span class="code">/></span>
+      </p>
+      </a>
+    </div>
+  </div> -->
+</section>
+
+<div id="show-all">
+  <a href="https://github.com/pavanvittanala">
+    <button id="show-all-btn">Show All<span class="code"><i class="fa fa-chevron-right" aria-hidden="true"></i></span></button>
+  </a>
+</div>
+
+<section id="contact">
+  <h1>Let's work together...</h1>
+  <p>How do you take your coffee?</p>
+  <ul>
+    <li><a href="https://github.com/pavanvittanala" id="profile-link" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/pavanvittanala" id="profile-link" target="_blank"><i class="fa fa-free-code-camp" aria-hidden="true"></i> LinkedIn</a></li>
+    <li><a href="https://auth.geeksforgeeks.org/user/vittanalapavan/" id="profile-link" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i> GeeksForGeeks</a></li>
+
+    <li><a href="https://www.facebook.com/VittanalaPavan" id="profile-link" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+    <li><a href="https://www.instagram.com/vittanala.pavan___00.02" id="profile-link" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+    <li><a href="https://pavanvittanala.github.io" id="profile-link" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i> Personal Site</a></li>
+  </ul>
+  <div class="under-line"></div>
+  <h2>Created & Designed by <a href="">Pavan Vittanala</a></h2>
+</section>
+
+</body>
 </html>
